# p2p-cli

./: .gitignore  .p2p_identity  Cargo.toml  PLANNING.md  README.md  message
.github/workflows/: ci.yml  release.yml
src/: crypto.rs  error.rs  main.rs  messagedb.rs
src/app/: config.rs  mod.rs  state.rs
src/crypto/: identity.rs  mod.rs  session.rs
src/network/: addr.rs  connection.rs  messages.rs  mod.rs
src/ui/: input.rs  mod.rs  renderer.rs  terminal.rs
