[package]
name = "p2p-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rsa = "0.9"
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
rusqlite = "0.29"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"