[package]
name = "p2p-cli"
version = "0.2.0"
edition = "2021"
description = "A modern, secure, terminal-based peer-to-peer messenger with hybrid encryption"
authors = ["KyleDerZweite"]
license = "MIT"
repository = "https://github.com/KyleDerZweite/p2p-cli"
keywords = ["p2p", "chat", "encryption", "tui", "messenger"]
categories = ["command-line-utilities", "network-programming", "cryptography"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.21"
aes-gcm = "0.10"
snow = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
zeroize = { version = "1.7", features = ["derive"] }
directories = "4.0"
tempfile = "3.3"
